# cpp-RNG-benchmark

./: .gitignore  CMakeLists.txt  README.md
src/: benchmark.h  main.cpp  rngbenchmark.h
